loongarch: add SDL_FillSurfaceRect4LSX opt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -934,11 +934,13 @@ if(SDL_ASSEMBLY)
         set_property(SOURCE
             "${SDL3_SOURCE_DIR}/src/video/yuv2rgb/yuv_rgb_lsx.c"
             "${SDL3_SOURCE_DIR}/src/video/SDL_blit_A.c"
+            "${SDL3_SOURCE_DIR}/src/video/SDL_fillrect.c"
             APPEND PROPERTY COMPILE_OPTIONS "-mlsx")
 
         set_property(SOURCE
             "${SDL3_SOURCE_DIR}/src/video/yuv2rgb/yuv_rgb_lsx.c"
             "${SDL3_SOURCE_DIR}/src/video/SDL_blit_A.c"
+            "${SDL3_SOURCE_DIR}/src/video/SDL_fillrect.c"
             PROPERTY SKIP_PRECOMPILE_HEADERS 1)
         set(HAVE_LSX TRUE)
       endif()
