--- a/ohos-project/entry/src/main/module.json5
+++ b/ohos-project/entry/src/main/module.json5
@@ -22,6 +22,9 @@
       },
       {
         "name": "ohos.permission.INTERNET"
+      },
+      {
+        "name": "ohos.permission.SYSTEM_FLOAT_WINDOW"
       }
     ],
     
@@ -37,14 +40,16 @@
         "label": "$string:EntryAbility_label",
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
+        "orientation": "landscape",
         "exported": true,
+        "supportWindowMode": ["floating", "fullscreen", "split"],
         "skills": [
           {
             "entities": [
               "entity.system.home"
             ],
             "actions": [
-              "action.system.home"
+              "ohos.want.action.home"
             ]
           }
         ]
