OpenHarmony: misc api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1658,6 +1658,11 @@ elseif(OHOS)
     endif()
   endif()
 
+  sdl_glob_sources(
+    "${SDL3_SOURCE_DIR}/src/misc/ohos/*.c"
+  )
+  set(HAVE_SDL_MISC TRUE)
+
   sdl_glob_sources("${SDL3_SOURCE_DIR}/src/locale/ohos/*.c")
   set(HAVE_SDL_LOCALE TRUE)
 
