--- a/ohos-project/entry/src/main/cpp/CMakeLists.txt
+++ b/ohos-project/entry/src/main/cpp/CMakeLists.txt
@@ -18,4 +18,4 @@ include_directories(${NATIVERENDER_ROOT_PATH}
 
 add_library(entry SHARED napi_init.cpp)
 add_dependencies(entry SDL3::SDL3-shared)
-target_link_libraries(entry PUBLIC libace_napi.z.so libSDL3.so libvulkan.so libGLESv2.so libohaudio.so)
+target_link_libraries(entry PUBLIC libace_napi.z.so libSDL3.so libvulkan.so libGLESv2.so libohaudio.so libohsensor.so)
