--- a/ohos-project/entry/src/main/module.json5
+++ b/ohos-project/entry/src/main/module.json5
@@ -22,6 +22,12 @@
       },
       {
         "name": "ohos.permission.INTERNET"
+      },
+      {
+        "name": "ohos.permission.ACCELEROMETER"
+      },
+      {
+        "name": "ohos.permission.GYROSCOPE"
       }
     ],
     
