Restrict DSU joystick support to specific platforms
Updated CMakeLists.txt to enable DSU joystick support only on Windows, Linux, Android, Haiku, FreeBSD, NetBSD, OpenBSD, and macOS. Added conditional inclusion of <sys/ioctl.h> in SDL_dsujoystick.c. Removed unused GetDSUMutex helper from SDL_dsujoystick_driver.c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1377,7 +1377,7 @@ if(SDL_JOYSTICK)
   endif()
 
   # DSU (DualShock UDP) client support
-  if(SDL_DSU_JOYSTICK AND NOT EMSCRIPTEN)
+  if(SDL_DSU_JOYSTICK AND NOT EMSCRIPTEN AND (WINDOWS OR LINUX OR ANDROID OR HAIKU OR FREEBSD OR NETBSD OR OPENBSD OR MACOS))
     set(SDL_JOYSTICK_DSU 1)
     sdl_glob_sources(
       "${SDL3_SOURCE_DIR}/src/joystick/dsu/*.c"
