Implement IPC API and Posix implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4000,6 +4000,9 @@ if(SDL_SHARED)
   if(NOT CMAKE_VERSION VERSION_LESS "3.16")
     target_precompile_headers(SDL3-shared PRIVATE "$<$<OR:$<COMPILE_LANGUAGE:C>,$<COMPILE_LANGUAGE:CXX>>:${PROJECT_SOURCE_DIR}/src/SDL_internal.h>")
   endif()
+  if(HAIKU)
+    target_link_libraries(SDL3-shared PUBLIC network)
+  endif()
 endif()
 
 if(SDL_STATIC)
@@ -4023,6 +4026,9 @@ if(SDL_STATIC)
   set_property(TARGET SDL3-static PROPERTY INTERFACE_SDL_VERSION "SDL${SDL3_VERSION_MAJOR}")
   if(NOT CMAKE_VERSION VERSION_LESS "3.16")
     target_precompile_headers(SDL3-static PRIVATE "$<$<OR:$<COMPILE_LANGUAGE:C>,$<COMPILE_LANGUAGE:CXX>>:${PROJECT_SOURCE_DIR}/src/SDL_internal.h>")
+  endif()
+  if(HAIKU)
+    target_link_libraries(SDL3-static PUBLIC network)
   endif()
 endif()
 
@@ -4055,6 +4061,9 @@ if(SDL_TEST_LIBRARY)
   target_link_libraries(SDL3_test PRIVATE ${EXTRA_TEST_LIBS})
   set_property(TARGET SDL3_test APPEND PROPERTY COMPATIBLE_INTERFACE_STRING "SDL_VERSION")
   set_property(TARGET SDL3_test PROPERTY INTERFACE_SDL_VERSION "SDL${SDL3_VERSION_MAJOR}")
+  if(HAIKU)
+    target_link_libraries(SDL3_test PUBLIC network)
+  endif()
 endif()
 
 ##### Configure installation folders #####
