tests: extend testatomic timeout to 120 seconds
The default (i.e. 10 seconds) is not enough for slower architectures,
such as alpha or hppa.

Raise it to 120 seconds according to the feedback of hppa porters:
https://bugs.debian.org/1095774

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -326,7 +326,7 @@ endif()
 add_sdl_test_executable(testmultiaudio NEEDS_RESOURCES TESTUTILS SOURCES testmultiaudio.c)
 add_sdl_test_executable(testaudiohotplug NEEDS_RESOURCES TESTUTILS SOURCES testaudiohotplug.c)
 add_sdl_test_executable(testaudiorecording MAIN_CALLBACKS SOURCES testaudiorecording.c)
-add_sdl_test_executable(testatomic NONINTERACTIVE DISABLE_THREADS_ARGS "--no-threads" SOURCES testatomic.c)
+add_sdl_test_executable(testatomic NONINTERACTIVE NONINTERACTIVE_TIMEOUT 120 DISABLE_THREADS_ARGS "--no-threads" SOURCES testatomic.c)
 add_sdl_test_executable(testintersections SOURCES testintersections.c)
 add_sdl_test_executable(testrelative SOURCES testrelative.c)
 add_sdl_test_executable(testhittesting SOURCES testhittesting.c)
